--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
           </div>
-          <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
+          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bio&targets-hint=&default-sum=1200&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
