--- a/index.html
+++ b/index.html
@@ -563,11 +563,11 @@
               <li><span>&#10003;</span> Выбор темы</li>
               <li><span>&#10003;</span> Раскрывающийся текст</li>
               <li><span>&#10003;</span> <b>Рефералка 480₽</b></li>
-              <li class="excluded"><span>&#65794;</span> Лид форма</li>
+              <li><span>&#10003;</span> Лид форма</li>
               <li class="excluded"><span>&#65794;</span> Денежный перевод</li>
               <li class="excluded"><span>&#65794;</span>&nbsp;Поисковое&nbsp;продвижение</li>
-              <li class="excluded"><span>&#65794;</span> Аналитика</li>
-              <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
+              <li><span>&#10003;</span> Аналитика</li>
+              <li><span>&#10003;</span> Свои скрипты</li>
               <li class="excluded"><span>&#65794;</span> Свой домен</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
@@ -590,10 +590,10 @@
               <li><span>&#10003;</span> Раскрывающийся текст</li>
               <li><span>&#10003;</span> <b>Рефералка 960₽</b></li>
               <li><span>&#10003;</span> Лид форма</li>
-              <li class="excluded"><span>&#65794;</span> Денежный перевод</li>
+              <li><span>&#10003;</span> Денежный перевод</li>
               <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
-              <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
+              <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Свой домен (+1000 руб.)</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
             </ul>
