--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <div class="container">
     <div class="sec__footer">
       <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
-      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">3 дня бесплатно • Банковская карта не нужна</small>
     </div>
   </div>
 </section><section class="sec sec_white quality">
@@ -519,7 +519,7 @@
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>У вас есть инструкция?</span></div>
         <div class="how-it-work__txt">
-          <p>У ЛИЧНОГО БРЕНДА есть инструкция. Вы можете открыть ее по этой <a href="https://yadi.sk/i/L3W8Z3pkaLmT8A" target="_blank">ссылке</a>.</p>
+          <p>У ЛИЧНОГО БРЕНДА есть инструкция. Вы можете открыть ее по этой <a href="https://docs.google.com/document/d/1AGUVh4IW55slmg2y15zedXTbQuNo9bpD7aqtavg0vG8" target="_blank">ссылке</a>.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
