--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Можно ли привязать свой домен?</span></div>
         <div class="how-it-work__txt">
-          <p>Все пользователи платного тарифа могут использовать свой личный домен. Техподдержка ЛИЧНОГО БРЕНДА сама привяжет ваш домен, при условии его покупке на новый аккаунт в <a href="https://www.reg.ru/" target="_blank">REG.RU</a>. Средняя стоимость домена - 200 рублей в год, оплачивается в пользу <a href="https://www.reg.ru/" target="_blank">REG.RU</a>.</p>
+          <p>Все пользователи тарифа BLOGGER и выше могут использовать свой личный домен. Техподдержка ЛИЧНОГО БРЕНДА сама привяжет ваш домен, при условии его покупки на новый аккаунт в <a href="https://www.reg.ru/" target="_blank">REG.RU</a>. Средняя стоимость домена - 200 рублей в год, оплачивается в пользу <a href="https://www.reg.ru/" target="_blank">REG.RU</a>. Подключение 1000руб.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
@@ -576,7 +576,7 @@
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
-            <div class="popup__col-plan">Bloger</div>
+            <div class="popup__col-plan">Blogger</div>
             <div class="popup__col-price">₽200</div>
             <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
