--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </h1>
         <div class="main-sec__txt">
           <p><b>Обрети славу и популярность в интернет пространстве, благодаря своему личному бренду</b></p>
-          <p>Представляем новую онлайн платформу для продвижения блогеров, частных специалистов и предпринимателей в Google и Яндекс, благодаря вашему контенту в Инстаграм.</p>
+          <p>Прямо сейчас получи сайт из Instagram, чтобы находить новых подписчиков в Яндекс и Google</p>
         </div>
  
         <form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
