--- a/index_40.html
+++ b/index_40.html
@@ -105,10 +105,8 @@
           <p><b>Обрети славу и популярность в интернет пространстве, благодаря своему личному бренду</b></p>
           <p>Прямо сейчас получи сайт из Instagram, чтобы находить новых подписчиков в Яндекс и Google</p>
         </div>
-
-        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
  
-        <!--<form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
+        <form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
           <input id="ref" type="hidden" name="ref" value="" />
           <input id="theme" type="hidden" name="theme" value="" />
           <div class="main-sec__form-row">
@@ -121,7 +119,7 @@
           <small id="inst_comment" class="settings__form-small"></small>
           <small id="error" class="settings__form-small error"></small>
           <small class="main-sec__form-small">3 дня бесплатно • Дальше действовать будет бренд</small>
-        </form>-->
+        </form>
       </div>
       <div class="main-sec__fig">
         <img src="img/pic/main-sec.png" alt="">
@@ -157,7 +155,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
       <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
@@ -258,7 +256,7 @@
   
   <div class="container">
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
       <small class="sec__footer-small">3 дня бесплатно • Банковская карта не нужна</small>
     </div>
   </div>
@@ -314,7 +312,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
       <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
@@ -355,7 +353,7 @@
     </div>
     
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a href="#" class="btn btn_red sec__footer-btn js-header-up"><span>Попробовать</span></a>
       <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
     </div>
   </div>
