--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <p>Прямо сейчас получи сайт из Instagram, чтобы находить новых подписчиков в Яндекс и Google</p>
         </div>
 
-        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODU5MzczMjUyNzI1MTgx?igshid=1qoak9zobr2cz&story_media_id=2232964642968242664" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
  
         <!--<form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
           <input id="ref" type="hidden" name="ref" value="" />
