--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           <p>Прямо сейчас получи сайт из Instagram, чтобы находить новых подписчиков в Яндекс и Google</p>
         </div>
 
-        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODU5MzczMjUyNzI1MTgx?igshid=1qoak9zobr2cz&story_media_id=2232964642968242664" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
- 
+        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
+ 	<small class="main-sec__form-small">Логин и пароль от Instagram не понадобится</small>
         <!--<form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
           <input id="ref" type="hidden" name="ref" value="" />
           <input id="theme" type="hidden" name="theme" value="" />
@@ -116,7 +116,7 @@
               <span class="main-sec__form-title">Введите Ваш Instagram</span>
               <input class="input main-sec__form-input" type="text" name="userName" placeholder="user_name" required>
             </label>
-            <button class="btn main-sec__form-submit" type="submit">Попробовать</button>
+            <button class="btn main-sec__form-submit" type="submit">ХОЧУ</button>
           </div>
           <small id="inst_comment" class="settings__form-small"></small>
           <small id="error" class="settings__form-small error"></small>
@@ -158,7 +158,7 @@
     </ul>
     <div class="sec__footer">
       <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
-      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
 </section><section class="sec sec_dark skins" id="skins">
@@ -259,7 +259,7 @@
   <div class="container">
     <div class="sec__footer">
       <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
-      <small class="sec__footer-small">3 дня бесплатно • Банковская карта не нужна</small>
+      <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
 </section><section class="sec sec_white quality">
@@ -315,7 +315,7 @@
     </ul>
     <div class="sec__footer">
       <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
-      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
 </section><section class="sec sec_dark reviews">
@@ -356,7 +356,7 @@
     
     <div class="sec__footer">
       <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
-      <small class="sec__footer-small">3 дня бесплатно • Кредитная карта не нужна</small>
+      <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
 </section><section class="sec sec_white how-it-work">
