--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
@@ -258,7 +258,7 @@
   
   <div class="container">
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
@@ -314,7 +314,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
@@ -355,7 +355,7 @@
     </div>
     
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
