--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <p>Прямо сейчас получи сайт из Instagram, чтобы находить новых подписчиков в Яндекс и Google</p>
         </div>
 
-        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
+        <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTA2MDcwMTQ2MDk2MDMz?igshid=1w105wq3m9dq2&story_media_id=2233537068473677654" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
  	<small class="main-sec__form-small">Логин и пароль от Instagram не понадобится</small>
         <!--<form action="https://admapi.itsinsta.site/api/profiles" method="post" class="main-sec__form">
           <input id="ref" type="hidden" name="ref" value="" />
@@ -157,7 +157,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTA2MDcwMTQ2MDk2MDMz?igshid=1w105wq3m9dq2&story_media_id=2233537068473677654" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
@@ -258,7 +258,7 @@
   
   <div class="container">
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTA2MDcwMTQ2MDk2MDMz?igshid=1w105wq3m9dq2&story_media_id=2233537068473677654" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
@@ -314,7 +314,7 @@
       </li>
     </ul>
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTA2MDcwMTQ2MDk2MDMz?igshid=1w105wq3m9dq2&story_media_id=2233537068473677654" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
@@ -355,7 +355,7 @@
     </div>
     
     <div class="sec__footer">
-      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3ODgyNzYwMzk0NDk2NTAz?igshid=fnzbuk651vt0&story_media_id=2232955376165363827" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
+      <a target="_blank" href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MTA2MDcwMTQ2MDk2MDMz?igshid=1w105wq3m9dq2&story_media_id=2233537068473677654" class="btn btn_red sec__footer-btn"><span>ХОЧУ</span></a>
       <small class="sec__footer-small">Логин и пароль от Instagram не понадобится</small>
     </div>
   </div>
