--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
       <li class="advantages__icn">
         <div class="advantages__icn-pic advantages__icn-pic_click"></div>
         <div class="advantages__icn-name">В одно касание</div>
-        <div class="advantages__icn-txt">Получай подписчиков отовсюду: в&nbsp;поиске, в&nbsp;соцсетях, в&nbsp;статьях.</div>
+        <div class="advantages__icn-txt">Автоматически превращай свои посты в страницы сайта</div>
       </li>
       <li class="advantages__icn">
         <div class="advantages__icn-pic advantages__icn-pic_plant"></div>
-        <div class="advantages__icn-name">Взрывной рост</div>
-        <div class="advantages__icn-txt">Раскрой потенциал движущей силы твоего Инстаграм!</div>
+        <div class="advantages__icn-name">Увеличивай охваты</div>
+        <div class="advantages__icn-txt">Показывай посты в Google и Яндекс</div>
       </li>
       <li class="advantages__icn">
         <div class="advantages__icn-pic advantages__icn-pic_clock"></div>
-        <div class="advantages__icn-name">Управляй брендом</div>
-        <div class="advantages__icn-txt">Анализируй все каналы и запускайте продвижение лучших.</div>
+        <div class="advantages__icn-name">Увеличивай вовлечение</div>
+        <div class="advantages__icn-txt">Снова показывай популярные посты на первом экране</div>
       </li>
     </ul>
     <div class="sec__footer">
@@ -167,7 +167,7 @@
     <div class="skins__main">
       <h2 class="sec__title">Тебе понравится, <br><span>выбери любую тему</span></h2>
       <div class="sec__txt">
-        <p>Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Instagram. А ещё вы получаете страницу для ссылки Instagram в разделе профиля: красиво, удобно и ПРОСТО!</p>
+        <p>Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Instagram. Восхитительный, вкусный дизайн и небывалая простота.</p>
       </div>
     </div>  
   </div>
@@ -270,28 +270,28 @@
         <div class="quality__item-icn quality__item-icn_chat"></div>
         <div class="quality__item-main">
           <div class="quality__item-name">Мессенджеры</div>
-          <div class="quality__item-txt">Ваши клиенты нажимают на ссылку, выбирают мессенджер и все. Они дойдут до вас через несколько секунд.</div>
+          <div class="quality__item-txt">Ваши клиенты нажимают на ссылку, выбирают мессенджер и они дойдут до вас через несколько секунд.</div>
         </div>
       </li>
       <li class="quality__item">
         <div class="quality__item-icn quality__item-icn_links"></div>
         <div class="quality__item-main">
           <div class="quality__item-name">Неограниченные ссылки</div>
-          <div class="quality__item-txt">Выбирайте между готовыми темами дизайна или создавайте свой уникальный стиль странички ссылок.</div>
+          <div class="quality__item-txt">В Instsgram всего одна ссылка. Долой ограничения! Теперь показывате весь ваш лучший контент!</div>
         </div>
       </li>
       <li class="quality__item">
         <div class="quality__item-icn quality__item-icn_refresh"></div>
         <div class="quality__item-main">
-          <div class="quality__item-name">Конверсионные пути</div>
-          <div class="quality__item-txt">Создавайте лендинги для GoogleAD, Яндекс Директ или таргетинга в соцсетях. Анализируйте клики по всем кнопкам.</div>
+          <div class="quality__item-name">Поток подписчиков</div>
+          <div class="quality__item-txt">Получайте новых подписчиков из поиска Google и Яндекс, а также из релкамы с посадкой на ваш сайт.</div>
         </div>
       </li>
       <li class="quality__item">
         <div class="quality__item-icn quality__item-icn_resonance"></div>
         <div class="quality__item-main">
           <div class="quality__item-name">Социальный резонанс</div>
-          <div class="quality__item-txt">Создавайте перекресные ссылки и направляйте подписчиков на другие ресурсы или продавайте прямо в инстаграм.</div>
+          <div class="quality__item-txt">Ваш контент становится интереснее. Теперь подписчики проводят еще больше времени на вах страничках.</div>
         </div>
       </li>
       <li class="quality__item">
