--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div class="skins__main">
       <h2 class="sec__title">Тебе понравится, <br><span>выбери любую тему</span></h2>
       <div class="sec__txt">
-        <p>Личный бренд платформа - это инструмент для автоматического продвижения личного бренда, благодаря контенту из вашего Instagram. Восхитительный, вкусный дизайн и небывалая простота.</p>
+        <p>Личный бренд - это инструмент для повышения охвата и вовлечнности ваших подписчиков, благодаря контенту из вашего Instagram который мы отправляем в поиск Google и Яндекс. Восхитительный, вкусный дизайн и небывалая простота.</p>
       </div>
     </div>  
   </div>
@@ -366,7 +366,7 @@
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>НАША МИССИЯ</span></div>
         <div class="how-it-work__txt">
-          <p>Мне очень нравится тенденция, на которую обращает своё внимание Екатерина Иноземцева <a href="https://instagram.com/einozemka" target="_blank">@einozemka</a>:</p>
+          <p>Мне очень нравится тенденция, на которую обращают своё внимание блогеры" target="_blank">@einozemka</a>:</p>
           <p>«В личный бренд приходит все больше людей, которые хотят помогать другим больше, чем зарабатывать на этом.»</p>
           <p>Мне очень по душе этот тренд и он откликается в нашей миссии:</p>
           <p>“Первоклассный it продукт должен стоить столько, чтобы покрывать затраты на сервера и зарплату сотрудников, при этом он должен быть простым и мощным, как росток пробивающийся через бетон».</p>
