--- a/settings.html
+++ b/settings.html
@@ -170,9 +170,9 @@
       <div class="popup__tab">
         <div class="popup__col">
           <div class="popup__col-header">
-            <div class="popup__col-plan">Start</div>
-            <div class="popup__col-price">₽0 </div>
-            <div class="popup__col-period">навсегда</div>
+            <div class="popup__col-plan">Bio</div>
+            <div class="popup__col-price">₽100</div>
+            <div class="popup__col-period">каждый месяц<br>при оплате за год</div>
           </div>
           <div class="popup__col-main">
             <ul>
@@ -183,17 +183,16 @@
               <li><span>&#10003;</span> Выбор темы</li>
               <li><span>&#10003;</span> Раскрывающийся текст</li>
               <li><span>&#10003;</span> <b>Рефералка 480₽</b></li>
-              <li class="excluded"><span>&#65794;</span> Лид форма</li>
+              <li><span>&#10003;</span> Лид форма</li>
               <li class="excluded"><span>&#65794;</span> Денежный перевод</li>
               <li class="excluded"><span>&#65794;</span>&nbsp;Поисковое&nbsp;продвижение</li>
-              <li class="excluded"><span>&#65794;</span> Аналитика</li>
-              <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
-              <li class="excluded"><span>&#65794;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Аналитика</li>
+              <li><span>&#10003;</span> Свои скрипты</li>
+              <li class="excluded"><span>&#65794;</span> Свой домен</li>
               <li class="excluded"><span>&#65794;</span> Popup окна</li>
-              <li class="excluded"><span>&#65794;</span> White label</li>
             </ul>
           </div>
-          <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
+          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bio&targets-hint=&default-sum=1200&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
